tests/it/snapshots/it__completion__bibtex__empty_document.snap
---
source: tests/it/completion.rs
assertion_line: 34
expression: "complete_and_resolve(&server, uri, 0, 0)?"
---
{
  "isIncomplete": false,
  "items": []
}
