tests/it/snapshots/it__completion__bibtex__entry_type_empty_name.snap
---
source: tests/it/completion.rs
assertion_line: 95
expression: "complete_and_resolve(&server, uri, 0, 1)?"
---
{
  "isIncomplete": true,
  "items": [
    {
      "label": "article",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "An article in a journal, magazine, newspaper, or other periodical which forms a \n self-contained unit with its own title. The title of the periodical is given in the \n journaltitle field. If the issue has its own title in addition to the main title of \n the periodical, it goes in the issuetitle field. Note that editor and related \n fields refer to the journal while translator and related fields refer to the article.\n\nRequired fields: `author`, `title`, `journaltitle`, `year/date`"
      },
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 1
          }
        },
        "newText": "article"
      }
    },
    {
      "label": "artwork",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "Works of the visual arts such as paintings, sculpture, and installations."
      },
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 1
          }
        },
        "newText": "artwork"
      }
    },
    {
      "label": "audio",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "Audio recordings, typically on audio cd, dvd, audio cassette, or similar media. See\n also `@music`."
      },
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 1
          }
        },
        "newText": "audio"
      }
    },
    {
      "label": "bibnote",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "This special entry type is not meant to be used in the `bib` file like other types. It is\n provided for third-party packages like `notes2bib` which merge notes into the bibliography.\n The notes should go into the `note` field. Be advised that the `@bibnote`\n type is not related to the `defbibnote` command in any way. `defbibnote`\n is for adding comments at the beginning or the end of the bibliography, whereas\n the `@bibnote` type is meant for packages which render endnotes as bibliography\n entries."
      },
      "preselect": false,
      "sortText": "03",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 1
          }
        },
        "newText": "bibnote"
      }
    },
    {
      "label": "book",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "A single-volume book with one or more authors where the authors share credit for\n the work as a whole. This entry type also covers the function of the `@inbook` type\n of traditional BibTeX.\n\nRequired fields: `author`, `title`, `year/date`"
      },
      "preselect": false,
      "sortText": "04",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 1
          }
        },
        "newText": "book"
      }
    },
    {
      "label": "bookinbook",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "This type is similar to `@inbook` but intended for works originally published as a\n stand-alone book. A typical example are books reprinted in the collected works of\n an author."
      },
      "preselect": false,
      "sortText": "05",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 1
          }
        },
        "newText": "bookinbook"
      }
    },
    {
      "label": "booklet",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "A book-like work without a formal publisher or sponsoring institution. Use the field\n howpublished to supply publishing information in free format, if applicable. The\n field type may be useful as well.\n\nRequired fields: `author/editor`, `title`, `year/date`"
      },
      "preselect": false,
      "sortText": "06",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 1
          }
        },
        "newText": "booklet"
      }
    }
  ]
}
