tests/it/snapshots/it__completion__bibtex__entry_type_empty_name_before.snap
---
source: tests/it/completion.rs
assertion_line: 111
expression: "complete_and_resolve(&server, uri, 0, 0)?"
---
{
  "isIncomplete": false,
  "items": []
}
