tests/it/snapshots/it__completion__bibtex__junk.snap
---
source: tests/it/completion.rs
assertion_line: 43
expression: "complete_and_resolve(&server, uri, 0, 0)?"
---
{
  "isIncomplete": false,
  "items": []
}
